@@ -1,11 +1,16 @@
 /*
- * $Id: ChangeLog,v 1.534 2008-08-31 20:40:53 guerra000 Exp $
+ * $Id: ChangeLog,v 1.535 2008-09-01 02:51:29 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-08-31 21:49 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_image.c
+    * Fixed scaled image.
+    * Fixed image size from IPicture.
 
 2008-08-31 15:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * include/i_datepicker.ch
